Изменения по результатам ревью 09.12.2024
- interface HistoryManager
Переход на List

- class InMemoryHistoryManager
Добавлена обёртка для защиты приватной переменной

- class InMemoryTaskManager
Переход на Map
Из конструктора убран хистори менеджер, теперь он получается от Managers

- interface TaskManager
Переход на List
Добавлен метод getHistory

- доработаны тесты